[gd_scene load_steps=3 format=3 uid="uid://cf2w4lbwfyrow"]

[ext_resource type="Script" uid="uid://da3e2xt23gpb4" path="res://Scripts/Levels and Main Menu/sceneChangerMenu.gd" id="1_28flt"]

[sub_resource type="LabelSettings" id="LabelSettings_erv1k"]
font_size = 40

[node name="Main Menu" type="Node2D"]
script = ExtResource("1_28flt")

[node name="Demo_button" type="Button" parent="."]
offset_left = 268.0
offset_top = 164.0
offset_right = 369.0
offset_bottom = 195.0
text = "Demo Stage"

[node name="Tutorial_Button" type="Button" parent="."]
offset_left = 258.0
offset_top = 101.0
offset_right = 374.0
offset_bottom = 132.0
text = "Tutorial Stage"

[node name="Title_text" type="Label" parent="."]
offset_left = 185.0
offset_top = 8.0
offset_right = 435.0
offset_bottom = 63.0
text = "Title of game"
label_settings = SubResource("LabelSettings_erv1k")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeleteLater" type="Button" parent="."]
offset_left = 265.0
offset_top = 227.0
offset_right = 372.0
offset_bottom = 258.0
text = "LEVEL STAGE"

[connection signal="pressed" from="Demo_button" to="." method="_on_demo_button_pressed"]
[connection signal="pressed" from="Tutorial_Button" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="DeleteLater" to="." method="_on_delete_later_pressed"]
